# Alpha3

./: ReadMe.txt
devel/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  student.h
devel/include/package/: gnss.h  object.h
devel/lib/package/: gps  main  makepath  npc
devel/lib/pkgconfig/: beginner_tutorials.pc  morai_msgs.pc  package.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/morai_msgs/cmake/: morai_msgs-msg-extras.cmake  morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/package/cmake/: package-msg-extras.cmake  package-msg-paths.cmake  packageConfig.cmake
devel/share/roseus/ros/beginner_tutorials/: manifest.l
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/package/: manifest.l
src/beginner_tutorials_answer/: README.md
src/beginner_tutorials_answer/launch/: dijkstra_path_pub2.launch  stanley_driving.launch
src/beginner_tutorials_answer/path/: global.txt
src/beginner_tutorials_answer/scripts/: before_mgeo_dijkstra_path_2.py  collision_avoid.py  destination_receiver.py  find_local_path.py  get_point.py  global_path_pub.py  gpsimu_parser.py  lane_fitting.py  lane_follower.py  lattice_planner.py  local_path_pub.py  mgeo_dijkstra_path_1.py  mgeo_dijkstra_path_2.py  mgeo_pub.py  mgeo_read.py  mission_master.py  path_maker.py  path_pub.py  path_reader.py  pure_pursuit_pid.py  pure_pursuit_pid_velocity_planning.py  s_drive.py  stanley.py  test_gps.py  tf_pub.py  turtle_status.py
src/package/: CMakeLists.txt
src/package/msg/: gnss.msg  object.msg
src/package/src/: global.h  gps.cpp  main.cpp  makepath.cpp  npc_control.cpp  ref.txt
(+19 files in other folders)
